2015-12-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves 72189: Use MarkerBasedTemplateService when available

2015-12-10 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for token validation
	* Check referer in some cases
	* Require static_info_tables version 6.3.6
	* Update the manual
	* Resolves #48635: fe_users pid as comma-separated list
	* Fix for url generation

2015-12-09 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for password edition after invitation acceptation
	* Add template for invalid token
	* Follow-up to Add template for invalid token
	* Resolves: #59446: Template: dynamic field length using TCA

2015-12-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for password edition
	* Fixes for files upload

2015-12-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for the login forms
	* Fix for edit link after login

2015-11-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* [!!!] Use namespacing
	* [!!!] Remove TS-configured userFuncs in favor of hooks
	* Resolves #71660: [!!!] Refactor, streamline and cleanup all scripts: all API changed
	* Resolves #61659: Usergroups are removed on update
	* Fix error regarding salutation in static TS template
	* Resolves #60167: Missing_terms_acknowlegded doesn't work
	* Correction to composer.json
	* Correction to plugin registration

2015-11-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #71286: [!!!] Remove xclass assignments
	* Adjust copyright notices

2015-10-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70999: Add configuration check utility
	* Resolves #71000: Add url utility
	* Follow-up to Resolves #71000: Add url utility

2015-10-23 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #70981: [!!!] Move default style sheets to Resources directory and add static template
	* Resolves #70984: Move example text files to Resources directory
	* Resolves #70986: Move template to Resources directory

2015-10-22 Stanislas Rolland  <typo3(arobas)sjbr.ca>