@@ -7,6 +7,3 @@ imageTypes = png, jpg, jpeg, gif, tif, tiff
 
   # cat=basic; type=int+; label=Maximun image size: Specify the maximum size of uploaded image files, in number of KB's. Default is 500.
 imageMaxSize = 500
-
-  # cat=directMail; type=boolean; label=Support Direct Mail: You must set this only when Direct Mail is not installed at the moment, and if you still want to use the Direct Mail tables in the BE. They must have been generated by a former installation of Direct Mail. Do not enable it when the tables needed by Direct Mail are missing!
-enableDirectMail = 0
